# account_platform

./: .gitignore  AWS_DEPLOYMENT.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEVELOPMENT_PROGRESS.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  PRE_DEPLOYMENT_CHECKLIST.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  TESTING-GUIDE.md  deploy.sh
.claude/: settings.local.json
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.sh
backend/app/: __init__.py  main.py
backend/app/api/: accounts.py  admin.py  auth.py  dashboard.py  health.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: dynamodb.py  models.py  quota_config_manager.py
backend/app/middleware/: cognito_auth.py
backend/app/schemas/: account.py  admin.py  auth.py  dashboard.py
backend/app/services/: account_service.py  aws_service.py  encryption_service.py
backend/scripts/: delete_account.py
cdk/: .gitignore  README.md  package-lock.json  package.json
cdk/config/: config.ts
cdk/lib/: cognito-stack.ts  dynamodb-stack.ts  ecs-stack.ts  frontend-stack.ts  kms-stack.ts  network-stack.ts
docs/: DEVELOPMENT_WORKFLOW.md
frontend/: .env.development  .env.example  .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: ._App.css  App.tsx  index.css
frontend/src/components/: Icon.tsx  PrivateRoute.tsx
frontend/src/components/Account/: index.ts  (+3 more)
frontend/src/config/: amplify.ts  api.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: index.ts  useAccounts.ts  useAuth.ts  useDashboard.ts  useQuotaConfig.ts
frontend/src/pages/: AccountDetail.tsx  AccountList.tsx  Home.tsx  Login.tsx  QuotaConfig.tsx  Settings.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: account.ts  admin.ts  auth.ts  dashboard.ts  index.ts
frontend/src/utils/: format.ts
tasks/: DEPLOYMENT-VERIFICATION.md  README.md  TASK-20260209-0130-quota-management.md  TEST-RESULTS-20260209.md
(+9 files in other folders)
